--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -10,6 +10,12 @@
 		method="post">
 		<table>
 			<tr>
+				<td>UserId:</td>
+				<td><input type="text" th:field="*{userId}" /></td>
+				<td th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}">userId
+					Error</td>
+			</tr>
+			<tr>
 				<td>Name:</td>
 				<td><input type="text" th:field="*{name}" /></td>
 				<td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name
