--- a/src/main/resources/templates/myForm.html
+++ b/src/main/resources/templates/myForm.html
@@ -4,25 +4,29 @@
 		2222222
 		<h1>成功!</h1>
 		你好:<span th:text="${user.name}"></span>
-		<!--
-        <form action="#" th:action="@{/selectUser}" th:object="${myForm}" method="post">
+
+        <!-- <form action="#" th:action="@{/selectUser}" th:object="${myForm}" method="post">
             <table>
-                <tr>
+				
+				<tr>
+				    <td>UserId:</td>
+				    <td><th:text="${user.name}"></td>
+				</tr>
+               <tr>
                     <td>Name:</td>
-                    <td><input type="text" th:field="*{name}" /></td>
-                    <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
+                    <td><input type="text" th:field="*{user.name}" /></td>
                 </tr>
                 <tr>
                     <td>Age:</td>
-                    <td><input type="text" th:field="*{age}" /></td>
-                    <td th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age Error</td>
+                    <td><input type="text" th:field="*{user.age}" /></td>
+
                 </tr>
                 <tr>
                     <td><button type="submit">Submit</button></td>
                 </tr>
-            </table>
+            </table>-->
         </form>
-		-->
+
 
     </body>
 </html>
