--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -28,7 +28,7 @@
 					Error</td>
 			</tr>
 			<tr>
-				<td><button type="submit">Submit</button></td>
+				<td><button type="submit">登録</button></td>
 			</tr>
 		</table>
 	</form>
