--- a/src/main/resources/templates/myForm.html
+++ b/src/main/resources/templates/myForm.html
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
     <body>
-		2222222
 		<h1>成功!</h1>
 		你好:<span th:text="${user.name}"></span>
 
-        <!-- <form action="#" th:action="@{/selectUser}" th:object="${myForm}" method="post">
+         <form action="#" th:action="@{/updateUser}" th:object="${myForm}" method="post">
             <table>
 				
-				<tr>
+				<!--<tr>
 				    <td>UserId:</td>
-				    <td><th:text="${user.name}"></td>
+					<td><span th:text="${user.name}"><br></td>
 				</tr>
-               <tr>
+              <tr>
                     <td>Name:</td>
                     <td><input type="text" th:field="*{user.name}" /></td>
                 </tr>
@@ -20,11 +19,11 @@
                     <td>Age:</td>
                     <td><input type="text" th:field="*{user.age}" /></td>
 
-                </tr>
+                </tr>--> 
                 <tr>
-                    <td><button type="submit">Submit</button></td>
+                    <td><button type="submit">確認</button></td>
                 </tr>
-            </table>-->
+            </table>
         </form>
 
 
