--- a/src/main/resources/templates/myForm.html
+++ b/src/main/resources/templates/myForm.html
@@ -1,28 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-    <body>
-		2222222
-		<h1>成功!</h1>
-		你好:<span th:text="${user.name}"></span>
-		<!--
-        <form action="#" th:action="@{/selectUser}" th:object="${myForm}" method="post">
-            <table>
-                <tr>
-                    <td>Name:</td>
-                    <td><input type="text" th:field="*{name}" /></td>
-                    <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
-                </tr>
-                <tr>
-                    <td>Age:</td>
-                    <td><input type="text" th:field="*{age}" /></td>
-                    <td th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age Error</td>
-                </tr>
-                <tr>
-                    <td><button type="submit">Submit</button></td>
-                </tr>
-            </table>
-        </form>
-		-->
-
-    </body>
+		<body>
+			<p th:text="${message}"></p>
+			<div th:if="${name != null}">
+		    <p th:text="#{p.nameText(${name})}"></p>
+			</div>
+		</body>
 </html>
+
