セキュリティー
セキュリティー

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<form action="#" th:action="@{/}" th:object="${personForm}"
+	<form action="#" th:action="@{/set}" th:object="${personForm}"
 		method="post">
 		<table>
 			<tr>
