--- a/src/main/resources/templates/Results.html
+++ b/src/main/resources/templates/Results.html
@@ -1,6 +1,12 @@
-<html>
-	<body>
-		Congratulations! You are old enough to sign up for this site.
-		2222222
-	</body>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="UTF-8" />
+
+  </head>
+  <body>
+
+	 <label>Here is the list of current users</label>
+
+  </body>
 </html>
