--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-	<meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
-    <h2 th:text="#{h2.titleText}"></h2>
-    <form th:action="@{/login}" method="post">
-        <div>
-            <label th:text="#{label.usernameText}" for="username"></label>
-            <input type="text" id="username" name="username"/>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+    <head>
+        <title>Spring Security Example </title>
+    </head>
+    <body>
+        <div th:if="${param.error}">
+            Invalid username and password.
         </div>
-        <div>
-            <label th:text="#{label.passwordText}" for="password"></label>
-            <input type="password" id="password" name="password"/>
+        <div th:if="${param.logout}">
+            You have been logged out.
         </div>
-        <div>
-            <button type="submit" th:text = "#{button.loginsubmitText}"></button>
-        </div>
-    </form>
-</body>
+        <form th:action="@{/login}" method="post">
+            <div><label> User Name : <input type="text" name="username"/> </label></div>
+            <div><label> Password: <input type="password" name="password"/> </label></div>
+            <div><input type="submit" value="Sign In"/></div>
+        </form>
+    </body>
 </html>
