--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-    <head>
-        <title>Spring Security Example</title>
-    </head>
-    <body>
-        <h1>Welcome!</h1>
-    </body>
+<html xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="UTF-8" />
+   
+  </head>
+  <body>
+	 <h1 th:inline="text">Hello <span th:remove="tag" sec:authentication="name">thymeleaf</span>!</h1>
+     -<form th:action="@{/logout}" method="post" style="padding: 5px;">
+         <input type="submit" value="Sign Out"/>
+     </form>
+	 <label>詳細</label>
+     <div>
+		<table style="border: 1px solid black; border-collapse: collapse;">
+		    <thead>
+		        <tr>
+		            <th style="border: 1px solid black; border-collapse: collapse;">ID</th>
+		            <th style="border: 1px solid black; border-collapse: collapse;">Name</th>
+		        </tr>
+		    </thead>
+		    <tbody>
+		        <!-- 使用 th:each 动态生成表格行 -->
+		        <tr th:each="user : ${users}">
+		            <td th:text="${user.userId}" style="border: 1px solid black; border-collapse: collapse;">ID: </td>
+		            <td th:text="${user.name}" style="border: 1px solid black; border-collapse: collapse;">Name: </td>
+		        </tr>
+		    </tbody>
+		</table>
+     </div>
+  </body>
 </html>
