--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,22 +10,24 @@
          <input type="submit" value="Sign Out"/>
      </form>
 	 <label>詳細</label>
-     <div>
+
 		<table style="border: 1px solid black; border-collapse: collapse;">
 		    <thead>
-		        <tr>
-		            <th style="border: 1px solid black; border-collapse: collapse;">ID</th>
-		            <th style="border: 1px solid black; border-collapse: collapse;">Name</th>
-		        </tr>
+				<tr>
+				    <th>UserId</th>
+				    <th>Name</th>
+				    <th>Email</th>
+				</tr>
 		    </thead>
 		    <tbody>
 		        <!-- 使用 th:each 动态生成表格行 -->
 		        <tr th:each="user : ${users}">
-		            <td th:text="${user.userId}" style="border: 1px solid black; border-collapse: collapse;">ID: </td>
-		            <td th:text="${user.name}" style="border: 1px solid black; border-collapse: collapse;">Name: </td>
+		            <td th:text="${user.user_id}" >UserId: </td>
+		            <td th:text="${user.name}" >Name: </td>
+					<td th:text="${user.mail}" >Email: </td>
 		        </tr>
 		    </tbody>
 		</table>
-     </div>
+
   </body>
 </html>
