--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,16 +4,11 @@
         <title>Spring Security Example </title>
     </head>
     <body>
-        <div th:if="${param.error}">
-            Invalid username and password.
-        </div>
-        <div th:if="${param.logout}">
-            You have been logged out.
-        </div>
-        <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
+        <form th:action="@{/login}" method="post" th:object="${personForm}">
+            <div><label> UserId : <input type="text" name="userId"/> </label></div>
+            <div><label> Password: <input type="password" name="pwd"/> </label></div>
             <div><input type="submit" value="Sign In"/></div>
         </form>
+        
     </body>
 </html>
