--- a/src/main/resources/templates/deleteResult.html
+++ b/src/main/resources/templates/deleteResult.html
@@ -8,9 +8,9 @@
 <body>
     <h2>Update Completed</h2>
 
-    <!-- 根据传递的 updateSuccess 属性判断是否显示弹窗 -->
-    <script th:if="${updateSuccess}">
-        alert("ユーザー情報更新されました!");
+    <!-- 根据传递的 deleteSuccess 属性判断是否显示弹窗 -->
+    <script th:if="deleteSuccess">
+        alert("ユーザー情報削除されました!");
     </script>
 </body>
 </html>
