--- a/src/main/resources/templates/myForm.html
+++ b/src/main/resources/templates/myForm.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Details Page</title>
         <!-- 导入CSS文件 -->
-    <link rel="stylesheet" href="/css/styles.css">
-       <!-- 在 head 中包含 JavaScript 文件 -->
-    <script src="scripts.js"></script>
+    <link rel="stylesheet" href="/css/myForm.css">
 </head>
 <body>
     <div class="form-container">
