--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,6 +11,9 @@
             <div><label> UserId : <input type="text" name="userId"/> </label></div>
             <div><label> Password: <input type="password" name="pwd"/> </label></div>
             <div><input type="submit" value="Sign In"/></div>
+            <div th:if="${error}" style="color: red;">
+                <p th:text="${error}"></p> <!-- 错误信息 -->
+            </div>
         </form>
         
     </body>
