HTMLにJavaScriptをインポートする

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+     <script src="/js/formHandler.js" defer></script> <!-- 引入外部 JS 文件 -->
 </head>
 <body>
    <h1>欢迎来到首页</h1>
@@ -11,10 +12,5 @@
     </form>
     <h1>JavaScript 页面跳转</h1>
     <button onclick="redirectToSuccess()">跳转到成功页面</button>
-    <script>
-        function redirectToSuccess() {
-          window.location.href = "/success"; // 跳转到后端定义的 /success 页面
-        }
-    </script>
 </body>
 </html>
