バックエンドに取得したデータをhtmlに表示

--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -7,13 +7,17 @@
 </head>
 <body>
 
-<label for="weather">今日の天気を選択してください: </label>
+<!-- <label for="weather">今日の天気を選択してください: </label>
 <select id="weather">
   <option value="">--選択してください--</option>
   <option value="sunny">晴れ</option>
   <option value="rainy">雨</option>
   <option value="snowing">雪</option>
   <option value="overcast">曇り</option>
+</select> -->
+<label for="weather-dropdown">天気：</label>
+<select id="searchable-dropdown">
+  <option value="">加载中...</option>
 </select>
  <p id="weather-message"></p>
 </body>
