--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -20,6 +20,27 @@
   <option value="">加载中...</option>
 </select>
  <p id="weather-message"></p>
+ <!-- アロー関数-->
+ <input id="textBox" type="text" />
+<div id="output"></div>
+<!--多选框-->
+<form id="myForm">
+  <input type="checkbox" name="interests" value="sports"> Sports
+  <input type="checkbox" name="interests" value="music"> Music
+  <input type="checkbox" name="interests" value="reading"> Reading
+  <button type="button" onclick="submitForm()">Submit</button>
+</form>
+
+<!--多选框使用AJAX发送数据到服务器-->
+<form id="myForm01">
+  <input type="checkbox" name="interests" value="sports"> Sports
+  <input type="checkbox" name="interests" value="music"> Music
+  <input type="checkbox" name="interests" value="reading"> Reading
+  <button type="button" onclick="submitForm01()">Submit01</button>
+</form>
+
+  
+ 
 </body>
 <script src="/js/weather.js" defer></script> <!-- 引入外部 JS 文件 -->
 
